# relay-server

./: .gitignore  flake.nix
crates/: .gitignore  relay.toml.example
crates/relay/src/: doc_restore.rs  lib.rs  main.rs  migrations.rs  server.rs  subdocs.rs
crates/relay/src/stores/: filesystem.rs
crates/specs/: subdoc-state-vector-index-client-guide.md
crates/y-sign/: Cargo.toml
crates/y-sign/src/: main.rs
crates/y-sweet-core/: Cargo.toml
crates/y-sweet-core/src/: auth.rs  config.rs  doc_connection.rs  doc_sync.rs  event.rs  sync_kv.rs
crates/y-sweet-core/src/store/: mod.rs  s3.rs
crates/y-sweet-core/src/sync/: mod.rs
crates/y-sweet-core/tests/: go_cwt_interop.rs
nix/: module.nix  package.nix
