[package]
name = "y-sign"
version = "0.8.1"
edition = "2021"
description = "Token signing and verification tool for y-sweet"
license = "MIT"
homepage = "https://y-sweet.dev"
repository = "https://github.com/drifting-in-space/y-sweet"

[dependencies]
anyhow = "1.0.72"
ciborium = "0.2"
clap = { version = "4.3.12", features = ["derive", "env"] }
rusty-s3 = "0.9.1"
serde_json = "1.0.103"
time = "0.3.20"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
url = "2.4.0"
y-sweet-core = { version = "0.8.1", path = "../y-sweet-core" }

[dev-dependencies]
tempfile = "3.5.0"
